# spotify-assistant

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml  ruff.toml
.claude/: settings.json
.claude/hooks/: run-ruff.sh
data/: brega_pairs.csv  track_pairs.csv
docs/: spotify_api.md
prompts/: ai_architect.md  context.md
spotify_assistant/: cli.py  exceptions.py  main.py  settings.py
spotify_assistant/clients/: spotify.py
spotify_assistant/models/: spotify.py  tracks.py
spotify_assistant/services/: csv_manager.py  playlist_builder.py
tests/: test_cli.py  test_csv_manager.py  test_playlist_builder.py  test_spotify_client.py
