[project]
name = "spotify-assistant"
version = "0.1.0"
description = "CLI tool for creating Spotify playlists with Brazilian Forró cover + original song pairs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "spotipy>=2.24.0",
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "loguru>=0.7.3",
]

[project.scripts]
spotify-assistant = "spotify_assistant.cli:app"

[project.optional-dependencies]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["spotify_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=spotify_assistant --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
